added install part to CMakeLists.txt, thanks to AdUser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,3 +53,7 @@ target_link_libraries (fragdb
 	${SQLITE3_LIBRARIES}
 	clusters
 )
+
+install (TARGETS fileseverity fragdb fragview
+	RUNTIME DESTINATION "bin"
+)
