set default build type to Release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 project (fragview)
 cmake_minimum_required (VERSION 2.6)
+set (CMAKE_BUILD_TYPE "Release")
 set (CMAKE_C_FLAGS_DEBUG "-ggdb3 -O0")
+set (CMAKE_C_FLAGS_RELEASE "-O3")
 
 find_package (PkgConfig REQUIRED)
 find_package (Boost REQUIRED)
