cmake machinery, set default build type to release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 project (fragview)
 cmake_minimum_required (VERSION 2.6)
-set (CMAKE_BUILD_TYPE "Release")
 set (CMAKE_C_FLAGS_DEBUG "-ggdb3 -O0")
+set (CMAKE_CXX_FLAGS_DEBUG "-ggdb3 -O0")
 set (CMAKE_C_FLAGS_RELEASE "-O3")
+set (CMAKE_CXX_FLAGS_RELEASE "-O3")
+if(NOT CMAKE_BUILD_TYPE)
+	set (CMAKE_BUILD_TYPE Release)
+endif()
 
 find_package (PkgConfig REQUIRED)
 find_package (Boost REQUIRED)
