move code and docs into subdirectories, rename .h to .hh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,67 +1,57 @@
-project (fragview)
-cmake_minimum_required (VERSION 2.6)
-set (CMAKE_C_FLAGS_DEBUG "-ggdb3 -O0")
-set (CMAKE_CXX_FLAGS_DEBUG "-ggdb3 -O0")
-set (CMAKE_C_FLAGS_RELEASE "-O3")
-set (CMAKE_CXX_FLAGS_RELEASE "-O3")
-if(NOT CMAKE_BUILD_TYPE)
-	set (CMAKE_BUILD_TYPE Release)
-endif()
+project(fragview)
+cmake_minimum_required(VERSION 2.6)
+set(CMAKE_C_FLAGS_DEBUG "-ggdb3 -O0")
+set(CMAKE_CXX_FLAGS_DEBUG "-ggdb3 -O0")
+set(CMAKE_C_FLAGS_RELEASE "-O3")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 find_package (PkgConfig REQUIRED)
 find_package (Boost REQUIRED)
 
-pkg_check_modules (GTKMM REQUIRED gtkmm-3.0)
-pkg_check_modules (GLIBMM REQUIRED glibmm-2.4)
-pkg_check_modules (SQLITE3 REQUIRED sqlite3)
+pkg_check_modules(REQ REQUIRED gtkmm-3.0 glibmm-2.4 sqlite3)
 
-link_directories (
-	${GTKMM_LIBRARY_DIRS}
-	${SQLITE3_LIBRARY_DIRS}
+link_directories(${REQ_LIBRARY_DIRS})
+
+include_directories(
+    ${REQ_INCLUDE_DIRS}
+    ${Boost_INCLUDE_DIRS}
 )
 
-include_directories (
-	${GTKMM_INCLUDE_DIRS}
-	${SQLITE3_INCLUDE_DIRS}
-	${Boost_INCLUDE_DIRS}
+add_library(clusters STATIC
+    src/clusters.cc
+    src/util.cc
 )
 
-add_library (clusters STATIC
-	clusters.cc
-	util.cc
+add_executable(fragview
+    src/fragview.cc
+    src/fragmap-widget.cc
+    src/filelist-widget.cc
+    src/mountpoint-select-dialog.cc
 )
 
-add_executable (fragview
-	fragview.cc
-	fragmap-widget.cc
-	filelist-widget.cc
-	mountpoint-select-dialog.cc
+add_executable(fileseverity
+    src/fileseverity.cc
 )
 
-add_executable (fileseverity
-	fileseverity.cc
+target_link_libraries(fragview
+    clusters
+    ${REQ_LIBRARIES}
 )
 
-target_link_libraries (fragview
-	clusters
-	${GTKMM_LIBRARIES}
+target_link_libraries(fileseverity
+    clusters
+    ${REQ_LIBRARIES}
 )
 
-target_link_libraries (fileseverity
-	clusters
-	${GLIBMM_LIBRARIES}
+add_executable(fragdb
+    src/fragdb.cc
 )
 
-add_executable (fragdb
-	fragdb.cc
+target_link_libraries(fragdb
+    clusters
+    ${REQ_LIBRARIES}
 )
 
-target_link_libraries (fragdb
-	clusters
-	${GLIBMM_LIBRARIES}
-	${SQLITE3_LIBRARIES}
-)
-
-install (TARGETS fileseverity fragdb fragview
-	RUNTIME DESTINATION "bin"
+install(TARGETS fileseverity fragdb fragview
+    RUNTIME DESTINATION "bin"
 )
